src/log/two_models.metagpu2.3475213.err
Traceback (most recent call last):
  File "main.py", line 15, in <module>
    from model import NetworkKMNIST as Network
  File "/home/rkohli/aml-project/src/model.py", line 292
    def forward(self, x):
      ^
SyntaxError: invalid syntax
